# vox

./: README.md  pyproject.toml
.artifacts/reports/: validation-20260623-floofy-growing-flurry-plan-audit.html
docs/: beats-button-investigation.md  vox-project-handoff.md
scripts/: coexistence_test.py  download_piper_model.py  fetch_vendor.ps1  webview_ram_test.py
tests/: test_remote_stt_tts.py
vox/: __main__.py  config.py
vox/audio/: devices.py  player.py  recorder.py  remote.py  segmenter.py  stt.py  tts.py  tts_windows.py
vox/hotkey/: listener.py  smoke_test.py
vox/server/: __main__.py  protocol.py
vox/ssh/: claude_proc.py  client.py  protocol.py
vox/ui/: app.py  hub.py  profiles.py  pty.py  server.py  state.py
vox/ui_web/: index.html
vox/ui_web/css/: app.css
vox/ui_web/js/: grid.js  layers.js  panel.js  terminal.js  ws.js
vox/util/: logging.py
