[project]
name = "vox"
version = "0.1.0"
description = "Voice-driven interface for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5.1",
    "numpy>=1.26",
    "pynput>=1.7.7",
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
    "piper-tts>=1.2.0",
    "asyncssh>=2.18",
    "faster-whisper>=1.2.1",
    "pywebview>=5.0",
    "aiohttp>=3.9",
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vox"]
